# deck-buddy

./: README.md  com.github.philip_scott.deck_buddy.yml  meson.build
.github/workflows/: ci.yml
data/: com.github.philip_scott.deck_buddy.appdata.xml.in  gresource.xml  gschema.xml  launcher.desktop.in
guides/add-app-to-steam/: run.sh
guides/remote-desktop/: readme.md  setup.sh
remote-desktop/: readme.md  setup.sh
src/: Application.vala  MainWindow.vala
src/Widgets/: ScriptCard.vala
